--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@react-three/fiber": "^8.13.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.0"
+    "react-router-dom": "^6.12.0",
+    "vite-plugin-vercel": "^9.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
